reformat code to match OpenNMS conventions